# gvg-np-tools

./: .cursorignore  .gitignore  AGENTS.md  Cargo.toml  GIM_REPLACE_NOTES.md  HOWTO.md  MODEL_EXTRACTION_STATUS.md  PMF2_M00_RENDER_ANALYSIS.md  PMF2_SPECIAL_SECTIONS_ANALYSIS.md  PMF2_TEST_CHECKLIST.md  PMF2_TODO.md  PPSSPP_OPERATION_ANALYSIS.md  README.md  RUST_DAE_PMF2_COMMANDS.md  RX78_RESOURCE_MAPPING_ANALYSIS.md  W_DATA.BIN.inventory.json  _mwo3_analysis.txt  _patch_zdata_inv.json  _verify.py  add_4_mesh_to_o05.dae  add_high_pcube1_bind_m00.fbx  add_multi_pcube1_bind_m00.fbx  add_multi_pcube1_bind_m00out.dae  add_multi_pcube1_bind_m01.fbx  add_multi_pcube1_bind_m01out.dae  add_multi_pcube1_bind_m07.fbx  add_multi_pcube1_bind_m07out.dae  add_pcube1_bind_m11.fbx  add_pcube1_bind_m11out.dae  analyze_pzz_blocks.py  batch_reconstruct_pl_meshes.py  block_analysis_report.json  combine_obj_files.py  eboot_pzz_hook_patch.py  extract_afs_all.py  extract_and_scan_entries.py  find_i16_mesh.py  gim_converter.py  i16_mesh_report.json  inventory_all_data_bins.py  (+46 more)
_inspect_stream000/: stream000.dae  stream000.pmf2meta.json
_ppsspp_inv/: W_DATA.BIN.inventory.json  X_DATA.BIN.inventory.json  Y_DATA.BIN.inventory.json  Z_DATA.BIN.inventory.json
data_bin_inventory/: X_DATA.BIN.inventory.json  Y_DATA.BIN.inventory.json  Z_DATA.BIN.inventory.json  _aggregate.json  _summary.json
docs/: EBOOT_HOOK_PATCH_STRATEGY.md  EBOOT_ROM_TABLE_IDA_FINDINGS.md  MOD_WORKFLOW.md  (+16 more)
rust_converter/: Cargo.toml
rust_converter/src/: afs.rs  dae.rs  gpu_renderer.rs  gui.rs  lib.rs  main.rs  pmf2.rs  pzz.rs  render.rs  save.rs  texture.rs  workspace.rs
rust_converter/src/gui/: asset_tree.rs  editors.rs  fonts.rs  gim_preview_cache.rs  inspector.rs  persist.rs  preview.rs
rust_converter/target_agent/: .rustc_info.json
rust_converter/target_verify/: .rustc_info.json
rust_converter/tests/: workspace_tooling.rs
(+51 files in other folders)
