[package]
name = "gvg_converter"
version = "0.1.0"
edition = "2024"
default-run = "gvg_modding_tool"
readme = "README.md"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
fbxcel = { version = "0.9.0", features = ["writer"] }
roxmltree = "0.21.1"
eframe = { version = "0.33.3", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.33.3"
wgpu = { version = "27", default-features = false, features = ["wgsl", "dx12", "vulkan"] }
bytemuck = { version = "1", features = ["derive"] }
rfd = "0.17.2"
image = "0.25.10"
ttf-parser = "0.25"
dirs = "6"

[profile.release]
# Smaller binary for distribution; compile time similar to `3` for most graphs.
opt-level = "s"
# Faster `cargo build --release` (less per-crate LLVM splitting); fine for this tool.
codegen-units = 256
# Remove debug/symbol tables from the linked binary (smaller artifact).
strip = true
